Bug 433010 - Crash on editing a title's animation
Summary: Crash on editing a title's animation
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.1
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-16 15:00 UTC by Larsen
Modified: 2021-03-07 10:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:
fritzibaby: Brainstorm+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Larsen 2021-02-16 15:00:48 UTC
SUMMARY
Kdenlive crashes when performing the following actions. Main problem seems to be editing the animation between choosing two templates.


STEPS TO REPRODUCE
- Project bin > Add title clip
- Select template "simple-scroll.kdenlivetitle"
- Animation > Edit start
- Select template "simple.kdenlivetitle"
- "Changes will be lost" -> Yes
- Animation > Edit start
- Animation > Edit end


OBSERVED RESULT
Crash


EXPECTED RESULT
No crash ;-)


SOFTWARE/OS VERSIONS
Windows 10, 20H2
MLT version 6.25.0
FFmpeg libraries
KDE Frameworks 5.77.0
Qt 5.15.1 (built against 5.15.1)
Comment 1 emohr 2021-03-06 10:58:04 UTC
Confirmed. Thank you for reporting. 

Following your steps I get a: " Exception thrown at 0x0000000002C1A993 (Qt5Widgets.dll) in kdenlive.exe: 0xC0000005: Access violation reading location 0x0000000000000180."

This crash happens on Linux as well.
Comment 2 Julius Künzel 2021-03-06 22:54:24 UTC
Git commit 773f41b175ce7439beda66de3e0627193d855352 by Julius Künzel.
Committed on 06/03/2021 at 22:53.
Pushed by jlskuz into branch 'master'.

Titler: Fix crash on load title during animation edit

M  +6    -0    src/titler/titlewidget.cpp

https://invent.kde.org/multimedia/kdenlive/commit/773f41b175ce7439beda66de3e0627193d855352