Titler: Fix crash on load title during animation edit

BUG: 433010